<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="epsi.md4.com.epsicalendar.activities.EventFormActivity">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/event_form_cancel_hint"
            android:id="@+id/activity_event_form_cancel"
            android:onClick="onClickCancel" />

        <Button
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/event_form_ok_hint"
            android:id="@+id/activity_event_form_validate"
            android:onClick="onClickOk" />
    </LinearLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/activity_event_form_title"
        android:inputType="text"
        android:hint="@string/event_form_title_hint" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/activity_event_form_desc"
        android:hint="@string/event_form_desc_hint" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="Start date"
        android:id="@+id/textView" />

    <DatePicker
        android:layout_width="wrap_content"
        android:layout_height="124dp"
        android:id="@+id/activity_event_form_date_begin"
        android:datePickerMode="spinner"
        android:calendarViewShown="false" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="End date"
        android:id="@+id/textView2" />

    <DatePicker
        android:layout_width="wrap_content"
        android:layout_height="124dp"
        android:id="@+id/activity_event_form_date_end"
        android:datePickerMode="spinner"
        android:calendarViewShown="false" />


</LinearLayout>
